[build-system]
requires = [
  "Cython>=3",
  "numpy",
  "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "grib2io"
version = "2.7.0"
description = "Python interface to the NCEP G2C Library for reading/writing GRIB2 files."
authors = [
  {name = "Eric Engle", email = "eric.engle@noaa.gov"},
  {name = "Adam Schnapp", email = "adam.schnapp@noaa.gov"},
]
requires-python = ">=3.8,<3.15"
keywords = [
  "weather", "data-science", "numpy", "meteorology", "weather-data", "atmospheric-science",
  "grib2", "grib2-decoder", "grib2-encoder", "ncep",
]
readme = "README.md"
license = {text = "MIT"}
#FUTURE license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Programming Language :: Cython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]
dependencies = [
  "numpy",
  "pyproj",
]

[project.optional-dependencies]

xarray = ["xarray"]
kerchunk = ["kerchunk", "numcodecs"]
icechunk = ["icechunk; python_version >= '3.12'"]
test = ["pytest", "s3fs", "dask", "distributed", "cython", "xarray", "kerchunk", "icechunk; python_version >= '3.12'", "dask[complete]"]
demo = ["xarray", "kerchunk", "icechunk; python_version >= '3.12'", 'virtualizarr', 'matplotlib', 'cartopy', 'jupyterlab', 'geoviews', 'hvplot']
all = [
  "xarray",
  "kerchunk",
  "numcodecs",
  "icechunk; python_version >= '3.12'",
  "virtualizarr",
  "matplotlib",
  "cartopy",
  "jupyterlab",
  "geoviews",
  "hvplot",
  "dask",
  "distributed",
  "cython",
  "pyproj",
  "pytest",
  "s3fs",
]

[project.entry-points."xarray.backends"]
grib2io = "grib2io.xarray_backend:GribBackendEntrypoint"

[project.entry-points."zarr.codecs"]
grib2io = "grib2io.codecs:Grib2SerializerCodec"
"numcodecs.grib2io" = "grib2io.codecs:Grib2SerializerCodec"

[project.scripts]
grib2io = "grib2io.cli.main:main"

[project.urls]
Documentation = "https://noaa-mdl.github.io/grib2io"
Repository = "https://github.com/NOAA-MDL/grib2io"

[tool.scikit-build]
cmake.version = ">=3.18"
wheel.packages = ["src/grib2io"]
sdist.include = [
  "CMakeLists.txt",
  "cmake/grib2io_config.py.in",
  "src/ext/**",
  "src/grib2io/**",
  "README.md",
  "LICENSE",
  "VERSION",
]
logging.level = "INFO"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
ignore = [
    "D",    # Ignore all docstring-related rules (D prefix)
    #"E501", # Ignore line-too-long (handled by formatter)
    "F401", # Ignore unused imports
    "F811", # Ignore redefinition
]

