# ---------------------------------------------------------------------------------------- 
# setup.cfg for grib2io
#
# Uncomment lines accordingly.
# ---------------------------------------------------------------------------------------- 

[options]
#use_static_libs = True

[directories]
# ---------------------------------------------------------------------------------------- 
# Define paths for NCEPLIBS-g2c Library
#
# Please set g2c_dir is include and library files are within the same location.
# If not, please set g2c_incdir and g2c_libdir.
# ---------------------------------------------------------------------------------------- 
# g2c_dir = /usr/local
# g2c_incdir =
# g2c_libdir =
#
# ---------------------------------------------------------------------------------------- 
# Define paths for NCEPLIBS-ip Library
#
# Please set ip_dir is include and library files are within the same location.
# If not, please set ip_incdir and ip_libdir.
# ---------------------------------------------------------------------------------------- 
# ip_dir =
# ip_incdir =
# ip_libdir =

[static_libs]
# ---------------------------------------------------------------------------------------- 
# Set the following variables if static linking to g2c.
#
# IMPORTANT: You do not need to specify the static library path for g2c here.
# ---------------------------------------------------------------------------------------- 
#aec_lib =
#jasper_lib =
#jpeg_lib =
#openjpeg_lib =
#png_lib =
#z_lib =
